# Zephyr-ESP32-2432S028R

./: .gitignore  .gitmodules  README.md
workspace/apps/demo_app/: CMakeLists.txt  prj.conf
workspace/apps/demo_app/boards/: esp32_devkitc_wroom.overlay
workspace/apps/demo_app/src/: main.c
workspace/apps/demo_app/src/display/: CMakeLists.txt  display.c  display.h
